tests/compile_fail/declare_scheduler_empty_name.stderr
error: declare_scheduler!: `name` must be a non-empty string
 --> tests/compile_fail/declare_scheduler_empty_name.rs:3:20
  |
3 | declare_scheduler!(MY_SCHED, {
  |                    ^^^^^^^^
